[gd_scene load_steps=10 format=3 uid="uid://dypp3jdl88pi0"]

[ext_resource type="Script" uid="uid://dn21ao1o0ys75" path="res://scripts/narrative/intro/narrative_5.gd" id="1_7mcgf"]
[ext_resource type="Texture2D" uid="uid://ctrc2aqacldld" path="res://assets/narrative/kitchen_wide.png" id="1_48jn5"]
[ext_resource type="Texture2D" uid="uid://b2fn5knoj3pmq" path="res://assets/narrative/characters/main_character_two.png" id="2_7mcgf"]
[ext_resource type="Texture2D" uid="uid://x4utwuqk2014" path="res://assets/narrative/characters/frat_bro.png" id="3_0ueay"]
[ext_resource type="AudioStream" uid="uid://d1y3pjjws6et5" path="res://assets/audio/voice/telandSample.wav" id="4_1dfpp"]
[ext_resource type="Texture2D" uid="uid://g5yvw20sy1ra" path="res://assets/narrative/items/mystical_object.png" id="4_kqrhs"]
[ext_resource type="Script" uid="uid://cjetl0qsi6j01" path="res://scripts/text_scene_2.gd" id="5_sn2av"]
[ext_resource type="Script" path="res://scripts/dialog_audio.gd" id="5_vb5fm"]

[sub_resource type="CanvasTexture" id="CanvasTexture_sn2av"]

[node name="NarrativeFive" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7mcgf")

[node name="KitchenWide" type="Sprite2D" parent="."]
position = Vector2(538.5, 638.5)
scale = Vector2(1.05957, 0.833984)
texture = ExtResource("1_48jn5")

[node name="MainCharacter" type="Sprite2D" parent="."]
position = Vector2(241, 970)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_7mcgf")

[node name="DialogAudio" type="AudioStreamPlayer" parent="MainCharacter"]
stream = ExtResource("4_1dfpp")
script = ExtResource("5_vb5fm")

[node name="FratBro" type="Sprite2D" parent="."]
position = Vector2(728, 973)
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_0ueay")
flip_h = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_sn2av")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 72.0
offset_top = 324.0
offset_right = 494.0
offset_bottom = 522.0
texture = SubResource("CanvasTexture_sn2av")

[node name="Label" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 102.0
offset_top = 337.0
offset_right = 492.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 32
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="Control"]

[node name="MysticalObject" type="Sprite2D" parent="."]
position = Vector2(357, 1138)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_kqrhs")

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Control/Timer" to="Control" method="_on_Timer_timeout"]
