[gd_scene load_steps=11 format=3 uid="uid://btrr805devtt7"]

[ext_resource type="Script" uid="uid://dsij18ex0qb4x" path="res://scripts/narrative/intro/narrative_6.gd" id="1_0o575"]
[ext_resource type="Texture2D" uid="uid://ctrc2aqacldld" path="res://assets/narrative/kitchen_wide.png" id="2_s88ms"]
[ext_resource type="Texture2D" uid="uid://x4utwuqk2014" path="res://assets/narrative/characters/frat_bro.png" id="3_2xkia"]
[ext_resource type="AudioStream" uid="uid://cbtbt0kcujk3l" path="res://assets/audio/voice/gabeSample.wav" id="4_obct2"]
[ext_resource type="Texture2D" uid="uid://garlhcligbug" path="res://assets/narrative/characters/main_character_eat.png" id="4_ovjjm"]
[ext_resource type="Texture2D" uid="uid://g5yvw20sy1ra" path="res://assets/narrative/items/mystical_object.png" id="5_mwmus"]
[ext_resource type="AudioStream" uid="uid://d1y3pjjws6et5" path="res://assets/audio/voice/telandSample.wav" id="5_ovjjm"]
[ext_resource type="Script" uid="uid://e70exscs0nxt" path="res://scripts/dialog_audio.gd" id="6_mwmus"]
[ext_resource type="Script" uid="uid://cjetl0qsi6j01" path="res://scripts/text_scene_2.gd" id="6_s88ms"]

[sub_resource type="CanvasTexture" id="CanvasTexture_2xkia"]

[node name="NarrativeSix" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0o575")

[node name="KitchenWide" type="Sprite2D" parent="."]
position = Vector2(538.5, 638.5)
scale = Vector2(1.05957, 0.833984)
texture = ExtResource("2_s88ms")

[node name="FratBro" type="Sprite2D" parent="."]
position = Vector2(728, 973)
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_2xkia")
flip_h = true

[node name="DialogAudio" type="AudioStreamPlayer" parent="FratBro"]
stream = ExtResource("4_obct2")
script = ExtResource("6_mwmus")
character_type = "frat_bro"

[node name="MainCharacterEat" type="Sprite2D" parent="."]
position = Vector2(251, 945)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_ovjjm")

[node name="DialogAudio" type="AudioStreamPlayer" parent="MainCharacterEat"]
stream = ExtResource("5_ovjjm")
script = ExtResource("6_mwmus")

[node name="MysticalObject" type="Sprite2D" parent="."]
position = Vector2(278, 789)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_mwmus")

[node name="Timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(500, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_s88ms")

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 72.0
offset_top = 324.0
offset_right = 494.0
offset_bottom = 522.0
texture = SubResource("CanvasTexture_2xkia")

[node name="Label" type="Label" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 102.0
offset_top = 337.0
offset_right = 492.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 32
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="Control"]

[connection signal="timeout" from="Control/Timer" to="Control" method="_on_Timer_timeout"]
